# regis

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  test.py
examples/: game-of-life.regis  hello-world.regis
src/: ast.rs  bytecode.rs  dict.rs  error.rs  function.rs  grammar.pest  interpreter.rs  interpreter_error.rs  lexer.rs  lib.rs  list.rs  main.rs  object.rs  oid.rs  parser.rs  shared.rs  source.rs  unescape.rs  value.rs  value_type.rs  vm.rs  vm_error.rs
src/ast/: base.rs  error.rs  expr.rs  expression.rs  grammar.pest  grammar.rs  location.rs  mod.rs  node.rs  operator.rs  parser.rs  statement.rs  stmt.rs  traverse.rs  unescape.rs
src/bytecode/: builder.rs  bytecode.rs  environment.rs  instruction.rs  mod.rs  module.rs  procedure.rs  variable.rs
src/bytecode/builder/: base.rs  builder.rs  environment.rs  expr.rs  expression.rs  marker.rs  mod.rs  operator.rs  statement.rs  stmt.rs
src/compiler/: base.rs  builder.rs  bytecode.rs  emit.rs  expression.rs  mod.rs  operator.rs  statement.rs
src/interpreter/: builtins.rs  capture.rs  error.rs  function.rs  interpreter.rs  list.rs  mod.rs  native.rs  object.rs  rid.rs  value.rs
src/lexer/: token.rs
src/parser/: common.rs  error.rs  expect.rs  expr.rs  result.rs  stmt.rs
src/source/: location.rs  path.rs  span.rs
src/vm/: closure.rs  dict.rs  error.rs  function.rs  list.rs  mod.rs  object.rs  value.rs  vm.rs
