[package]
name = "regis"
version = "0.1.0"
authors = ["Jake <jakep@rightline.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["v4"] }
